--- a/date-paginator.html
+++ b/date-paginator.html
@@ -18,7 +18,9 @@ Example:
   </style>
 
   <template>
-
+    <template is="dom-repeat" items="{{_dates}}">
+        <div>{{item.date}}</div>
+    </template>
   </template>
 
 </dom-module>
@@ -32,13 +34,13 @@ Example:
     properties: {
 
       /**
-       * `value` is used for selected value. If date is null `today` is used.
-       */
-       value: {
+      * `value` is used for selected value. If date is null `today` is used.
+      */
+      value: {
            type: Date,
            notify: true,
            value: ''
-        },
+      },
 
       /**
       * `startDate` for start-date.
@@ -58,6 +60,12 @@ Example:
         value: ''
       },
 
+      _dates: {
+        type: Array,
+        notify: true,
+        value: []
+      }
+
     },
 
     // Element Lifecycle
@@ -69,6 +77,7 @@ Example:
       //
       // This is the point where you should make modifications to the DOM (when
       // necessary), or kick off any processes the element wants to perform.
+      this._calculateDates();
     },
 
     attached: function() {
@@ -87,14 +96,18 @@ Example:
       // Use this to clean up anything you did in `attached`.
     },
 
-    // Element Behavior
+    _calculateDates() {
+      //TODO replace with moment.js
+      var dateAmount = (this.endDate - this.startDate)/(1000*60*60*24);
+      var date;
+      for(var i = 0; i <= dateAmount; i++) {
+        date = new Date(this.startDate);
+        date.setDate(this.startDate.getDate() + i);
+        this._dates.push({date: "asd"});
+      }
+    },
 
-    /**
-     * The `date-paginator-lasers` event is fired whenever `fireLasers` is called.
-     *
-     * @event date-paginator-lasers
-     * @detail {{sound: String}}
-     */
+    // Element Behavior
 
   });
 
