--- a/demo/index.html
+++ b/demo/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
 
-    <date-paginator></date-paginator>
+    <date-paginator start-date="2016-01-01" end-date="2016-01-31" value="2016-01-15"></date-paginator>
 
   </body>
 </html>
